first-screen created

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,24 @@
 </head>
 
 <body>
+    <div class="first-screen">
+        <header class="first-screen__header">
+            <div class="header__logo">ICNDY</div>
+            <nav class="header__nav">
+                <a href="#">mens</a>
+                <a href="#">womens</a>
+                <a href="#">brands</a>
+                <a href="#">sale</a>
+                <a href="#">news</a>
+            </nav>
+        </header>
+        <div class="first-screen__main">
+            <div class="first-screen__title">Stussy2014</div>
+            <div class="first-screen__subtitle">shop now</div>
+        </div>
+        <div class="first-screen__button">
+        </div>
+    </div>
 </body>
 
 </html>
