header add mixins

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <body>
     <div class="first-screen">
         <header class="first-screen__header">
-            <div class="header__logo">ICNDY</div>
-            <nav class="header__nav">
-                <a href="#">mens</a>
-                <a href="#">womens</a>
-                <a href="#">brands</a>
-                <a href="#">sale</a>
-                <a href="#">news</a>
-            </nav>
+            <div class="header__body">
+                <div class="header__logo">ICNDY</div>
+                <nav class="header__nav">
+                    <a href="#">mens</a>
+                    <a href="#">womens</a>
+                    <a href="#">brands</a>
+                    <a href="#">sale</a>
+                    <a href="#">news</a>
+                </nav>
+            </div>
         </header>
         <div class="first-screen__main">
             <div class="first-screen__title">Stussy2014</div>
