--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="first-screen">
         <header class="first-screen__header">
             <div class="header__body">
-                <div class="header__logo">ICNDY</div>
+                <div class="header__logo">
+                    <img src="img/logo.png" alt="logo">
+                </div>
                 <nav class="header__nav">
                     <a href="#">mens</a>
                     <a href="#">womens</a>
