first-screen finished

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
             </div>
         </header>
         <div class="first-screen__main">
-            <div class="first-screen__title">Stussy2014</div>
+            <div class="first-screen__title">Stussy2022</div>
             <div class="first-screen__subtitle">shop now</div>
         </div>
-        <div class="first-screen__button">
+        <div class="first-screen__button" onclick="scrollDown()">
+            <img src="img/scroll-down.png" alt="">
         </div>
     </div>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
