first-screen mobile full completed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
 </head>
 
 <body>
+    <div class="burger">
+        <div class="burger__body">
+            <div class="burger__header">
+                <div class="burger__logo">
+                    <img src="img/logo.png" alt="burger">
+                </div>
+                <div class="burger__button" onclick="burgerClick()">
+                    <img src="img/burger-exit.png" alt="burger-exit">
+                </div>
+            </div>
+            <div class="burger__nav">
+                <a href="#">mens</a>
+                <a href="#">womens</a>
+                <a href="#">brands</a>
+                <a href="#">sale</a>
+                <a href="#">news</a>
+            </div>
+        </div>
+
+    </div>
 
 
 
@@ -26,6 +46,9 @@
                     <a href="#">sale</a>
                     <a href="#">news</a>
                 </nav>
+                <div class="header__burger" onclick="burgerClick()">
+                    <img src="img/burger.png" alt="burger">
+                </div>
             </div>
         </header>
 
@@ -35,12 +58,24 @@
         </div>
 
         <div class="first-screen__button" onclick="scrollDown()">
-            <img src="img/scroll-down.png" alt="">
+            <img src="img/scroll-down.png" alt="scroll-down">
         </div>
     </div>
 
 
 
+    <div class="brands">
+        <div class="brands__body">
+            <div class="brands__gourmet">
+                <div class="brands__logo">
+                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                </div>
+                <div class="brands__name">
+                    Shop Gourmet
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 
