--- a/index.html
+++ b/index.html
@@ -66,7 +66,47 @@
 
     <div class="brands">
         <div class="brands__body">
-            <div class="brands__gourmet">
+            <div class="brands__brand gourmet">
+                <div class="brands__logo">
+                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                </div>
+                <div class="brands__name">
+                    Shop Gourmet
+                </div>
+            </div>
+            <div class="brands__brand carhartt">
+                <div class="brands__logo">
+                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                </div>
+                <div class="brands__name">
+                    Shop <br> Carhartt
+                </div>
+            </div>
+            <div class="brands__brand">
+                <div class="brands__logo">
+                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                </div>
+                <div class="brands__name">
+                    Shop Gourmet
+                </div>
+            </div>
+            <div class="brands__brand">
+                <div class="brands__logo">
+                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                </div>
+                <div class="brands__name">
+                    Shop Gourmet
+                </div>
+            </div>
+            <div class="brands__brand">
+                <div class="brands__logo">
+                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                </div>
+                <div class="brands__name">
+                    Shop Gourmet
+                </div>
+            </div>
+            <div class="brands__brand">
                 <div class="brands__logo">
                     <img src="img/gourmet-logo.png" alt="logo gourmet">
                 </div>
