--- a/index.html
+++ b/index.html
@@ -76,42 +76,42 @@
             </div>
             <div class="brands__brand carhartt">
                 <div class="brands__logo">
-                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                    <img src="img/carhartt-logo.png" alt="logo gourmet">
                 </div>
                 <div class="brands__name">
                     Shop <br> Carhartt
                 </div>
             </div>
-            <div class="brands__brand">
+            <div class="brands__brand adidas">
                 <div class="brands__logo">
-                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                    <img src="img/adidas-logo.png" alt="logo adidas">
                 </div>
                 <div class="brands__name">
-                    Shop Gourmet
+                    Shop <br> Adidas
                 </div>
             </div>
-            <div class="brands__brand">
+            <div class="brands__brand deep">
                 <div class="brands__logo">
-                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                    <img src="img/100deep-logo.png" alt="logo gourmet">
                 </div>
                 <div class="brands__name">
-                    Shop Gourmet
+                    10Deep <br> sale
                 </div>
             </div>
-            <div class="brands__brand">
+            <div class="brands__brand palace">
                 <div class="brands__logo">
-                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                    <img src="img/palace-logo.png" alt="logo gourmet">
                 </div>
                 <div class="brands__name">
-                    Shop Gourmet
+                    Palace <br> A/W2014
                 </div>
             </div>
-            <div class="brands__brand">
+            <div class="brands__brand nike">
                 <div class="brands__logo">
-                    <img src="img/gourmet-logo.png" alt="logo gourmet">
+                    <img src="img/nike-logo.png" alt="logo gourmet">
                 </div>
                 <div class="brands__name">
-                    Shop Gourmet
+                    Tech pack
                 </div>
             </div>
         </div>
