last-screen added

--- a/index.html
+++ b/index.html
@@ -119,6 +119,25 @@
 
 
 
+    <div class="last-screen">
+        <div class="last-screen__background">
+            <img src="img/bg-1.png" alt="bg-image">
+            <img src="img/bg-2.png" alt="bg-image">
+            <img src="img/bg-3.png" alt="bg-image">
+            <img src="img/bg-4.png" alt="bg-image">
+            <img src="img/bg-5.png" alt="bg-image">
+            <img src="img/bg-6.png" alt="bg-image">
+            <img src="img/bg-7.png" alt="bg-image">
+            <img src="img/bg-8.png" alt="bg-image">
+        </div>
+        <div class="last-screen__body">
+            <div class="last-screen__title">#ICNDY ON INSTAGRAM</div>
+            <div class="last-screen__subtitle">view hashtag</div>
+        </div>
+    </div>
+
+
+
     <script src="js/main.js"></script>
 </body>
 
