--- a/index.html
+++ b/index.html
@@ -138,6 +138,29 @@
 
 
 
+    <footer>
+        <div class="footer__body">
+            <nav class="footer__nav">
+                <a href="#">©ICND2022</a>
+                <a href="#">PRIVATE</a>
+                <a href="#">TERMS</a>
+                <a href="#">SHOP</a>
+                <a href="#">ABOUT</a>
+                <a href="#">CONTACT</a>
+            </nav>
+            <div class="footer__social">
+                <a href="#" class="footer__img">
+                    <img src="img/FB.png" alt="facebook">
+                </a>
+                <a href="#" class="footer__img">
+                    <img src="img/IG.png" alt="INSTAGRAM">
+                </a>
+                <a href="#" class="footer__img">
+                    <img src="img/TWTR.png" alt="twitter">
+                </a>
+            </div>
+        </div>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 
